--- a/style_tablet.css
+++ b/style_tablet.css
@@ -6,7 +6,7 @@
         --background: #DEE2E6;
         --black: #212529;
         --white: #F8F9FA;
-        --blue: #0553B1; 
+        --blue: #0553B1;
         --shadow: #0000002e;
         --pop-delay: 0.0s;
     }
@@ -49,35 +49,38 @@
         font-family: Arial, Helvetica, sans-serif;
     }
 
-    a,span {
+    a,
+    span {
         font-family: Arial, Helvetica, sans-serif;
     }
 
-      /*----- SLIDE ANIMATIONS -----*/
+    /*----- SLIDE ANIMATIONS -----*/
 
-      .slide-in-from-left {
+    .slide-in-from-left {
         animation: 1.0s ease-out 0s 1 slideInFromLeft forwards;
     }
-      
+
     @keyframes slideInFromLeft {
         0% {
-          transform: translateX(-50%);
+            transform: translateX(-50%);
         }
+
         100% {
-          transform: translateX(0);
+            transform: translateX(0);
         }
     }
 
     .slide-in-from-right {
         animation: 1.0s ease-out 0s 1 slideInFromRight forwards;
     }
-      
+
     @keyframes slideInFromRight {
         0% {
-          transform: translateX(50%);
+            transform: translateX(50%);
         }
+
         100% {
-          transform: translateX(0);
+            transform: translateX(0);
         }
     }
 
@@ -171,7 +174,7 @@
         position: relative;
     }
 
-    nav a:after {    
+    nav a:after {
         background: none repeat scroll 0 0 transparent;
         bottom: 0;
         top: 8vh;
@@ -182,12 +185,12 @@
         background: var(--white);
         transition: width 0.3s ease 0s, left 0.3s ease 0s;
         width: 0;
-      }
-      
-      nav a:hover:after { 
-        width: 80%; 
-        left: 0; 
-      }
+    }
+
+    nav a:hover:after {
+        width: 80%;
+        left: 0;
+    }
 
     /*----- HEADER -----*/
 
@@ -241,12 +244,12 @@
         border-radius: 50%;
         border: 5px solid var(--blue);
         background-color: var(--white);
-        box-shadow: 
-        rgba(0, 0, 0, 0.25) 0px 54px 55px,
-        rgba(0, 0, 0, 0.12) 0px -12px 30px,
-        rgba(0, 0, 0, 0.12) 0px 4px 6px,
-        rgba(0, 0, 0, 0.17) 0px 12px 13px,
-        rgba(0, 0, 0, 0.09) 0px -3px 5px;
+        box-shadow:
+            rgba(0, 0, 0, 0.25) 0px 54px 55px,
+            rgba(0, 0, 0, 0.12) 0px -12px 30px,
+            rgba(0, 0, 0, 0.12) 0px 4px 6px,
+            rgba(0, 0, 0, 0.17) 0px 12px 13px,
+            rgba(0, 0, 0, 0.09) 0px -3px 5px;
     }
 
     .avatar {
@@ -270,7 +273,7 @@
         color: var(--black);
     }
 
-     /*----- DOWNLOAD BUTTON -----*/
+    /*----- DOWNLOAD BUTTON -----*/
 
     .download_btn {
         width: 100%;
@@ -373,13 +376,14 @@
         position: relative;
         display: inline-block;
     }
-      
+
     .skill_box_tooltip .tooltiptext {
         visibility: hidden;
         width: 120px;
         bottom: 120%;
         left: 50%;
-        margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
+        margin-left: -60px;
+        /* Use half of the width (120/2 = 60), to center the tooltip */
         background-color: var(--blue);
         color: var(--white);
         text-align: center;
@@ -389,7 +393,7 @@
         position: absolute;
         z-index: 1;
     }
-      
+
     .skill_box_tooltip:hover .tooltiptext {
         visibility: visible;
     }
@@ -398,20 +402,23 @@
         visibility: visible;
         animation: 0.3s ease-out 0s 1 slideInFromTop forwards;
     }
-      
+
     @keyframes slideInFromTop {
         0% {
-          transform: translateY(-2vh);
-          opacity: 50%;
+            transform: translateY(-2vh);
+            opacity: 50%;
         }
+
         100% {
-          transform: translateY(0vh);
-          opacity: 100%;
+            transform: translateY(0vh);
+            opacity: 100%;
         }
     }
 
     @keyframes skill_pop {
-        50%  {transform: scale(1.2);}
+        50% {
+            transform: scale(1.2);
+        }
     }
 
     /*----- EXPERIENCES -----*/
@@ -440,13 +447,13 @@
     .bullet_exp_1 {
         margin-top: 10%;
     }
-    
+
     .bullet_exp_2 {
         margin-top: 70%;
     }
 
     .bullet_exp_3 {
-        margin-top: 130%; 
+        margin-top: 130%;
     }
 
     .exp_box {
@@ -496,13 +503,13 @@
         font-weight: bold;
     }
 
-     /*----- PROJETS -----*/
+    /*----- PROJETS -----*/
 
-     .projects {
+    .projects {
         margin-top: 10%;
-     }
+    }
 
-     .projects_list {
+    .projects_list {
         width: 100%;
         justify-content: center;
         align-items: center;
@@ -515,9 +522,10 @@
     }
 
     @keyframes project_pop {
-        0%  {
+        0% {
             transform: scale(0.5);
         }
+
         100% {
             transform: scale(1);
         }
@@ -537,7 +545,7 @@
         box-shadow: 0 3px 5px var(--shadow);
         border-radius: 10px;
     }
-    
+
     .project_header {
         width: 100%;
         text-align: center;
@@ -561,9 +569,9 @@
     }
 
     .project_label>span {
-        background-color: var(--white);
+        background-color: var(--blue);
         border-radius: 10px;
-        color: var(--black);
+        color: var(--white);
         padding: 1% 2% 1% 2%;
         box-shadow: 0 3px 5px var(--shadow);
         font-weight: bold;
@@ -646,6 +654,15 @@
         width: 100%;
     }
 
+    .project_content_smartphone_text {
+        margin-top: 5vh;
+        margin-bottom: 5vh;
+        background-color: var(--white);
+        border-radius: 10px;
+        padding: 1% 2% 1% 2%;
+        box-shadow: 0 3px 5px var(--shadow);
+    }
+
     .smartphone {
         position: relative;
         width: 300px;
@@ -655,10 +672,10 @@
         border-top-width: 60px;
         border-bottom-width: 60px;
         border-radius: 36px;
-      }
-      
-      /* The horizontal line on the top of the device */
-      .smartphone:before {
+    }
+
+    /* The horizontal line on the top of the device */
+    .smartphone:before {
         content: '';
         display: block;
         width: 60px;
@@ -669,10 +686,10 @@
         transform: translate(-50%, -50%);
         background: #333;
         border-radius: 10px;
-      }
-      
-      /* The circle on the bottom of the device */
-      .smartphone:after {
+    }
+
+    /* The circle on the bottom of the device */
+    .smartphone:after {
         content: '';
         display: block;
         width: 35px;
@@ -683,12 +700,12 @@
         transform: translate(-50%, -50%);
         background: #333;
         border-radius: 50%;
-      }
-      
-      /* The screen (or content) of the device */
-      .smartphone .content {
+    }
+
+    /* The screen (or content) of the device */
+    .smartphone .content {
         background: black;
-      }
+    }
 
     /*----- FOOTER -----*/
     footer {
