--- a/style_mobile.css
+++ b/style_mobile.css
@@ -713,4 +713,9 @@
         color: var(--black);
     }
 
+    .legal_notice {
+        color: var(--white);
+        text-decoration: none;
+    }
+
 }
