--- a/style_tablet.css
+++ b/style_tablet.css
@@ -710,6 +710,7 @@
     /*----- FOOTER -----*/
     footer {
         font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
         width: 100%;
         left: 0;
         bottom: 0;
@@ -744,6 +745,11 @@
 
     .github svg:hover {
         color: var(--black);
+    }
+
+    .legal_notice {
+        color: var(--white);
+        text-decoration: none;
     }
 
 }
